chore: make sure content doesn't overflow blog cards layout

--- a/assets/scss/elements/blog/_blogpost-covers.scss
+++ b/assets/scss/elements/blog/_blogpost-covers.scss
@@ -28,6 +28,7 @@ $overlay: rgba(0, 0, 0, 0.75);
 	}
 
 	.inner {
+		max-width: 100%;
 		min-height: 350px;
 		position: relative;
 		z-index: 10;
