--- a/style.css
+++ b/style.css
@@ -1493,6 +1493,7 @@ body .layout-grid > .article-content-col, .layout-grid {
 }
 
 .cover-post .inner {
+  max-width: 100%;
   min-height: 350px;
   position: relative;
   z-index: 10;
